minor tweaks to installation instructions

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ If you want to do it the fancy github way:
 <p>
 	To have it easily at your service (without having to remember the script's full path):
 	copy or symlink the <code>duviz.py</code> script to a folder in your <code>$PATH</code>
-	(and make sure that is executable).
+	(optionally removing the "<code>.py</code>" for more polish)
+	and make sure it is executable.
 	If you don't know what this means, ask your favorite UNIX guru.
 </p>
 
@@ -93,6 +94,7 @@ If you want to do it the fancy github way:
 	With or without directories as arguments.
 	Add options (like <code>--inodes</code>).
 	Ask more help with <code>--help</code>.
+	Be nice to the elderly.
 </p>
 
 </div>
