added forgotten HTML5BoilerPlate resources

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<meta name="viewport" content="width=device-width">
 
+	<link rel="stylesheet" href="css/h5bp-style.css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
