added 'progress reporting' feature

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Oh my god, that's handy for finding those pesky disk hogs!
 	<li>Virtually no dependencies. You just need a Python 2.x interpreter and the <code>du</code> and <code>ls</code> utilities, which are usually available on a typical out of the box UNIX setup.</li>
 	<li>Just one script file <code>duviz.py</code>. Put it where you want it. Use it how you want it.</li>
 	<li>Quick. No need to wait for a GUI tool to get up and running, let alone scanning your disk. The hard work is done by <code>du</code> (or <code>ls</code>), which run an C-speed.</li>
+	<li>Progress reporting while you wait. Be hypnotized!</li>
 	<li>Duviz detects your terminal width for maximum visualization pleasure.</li>
 	<li>No arguments: visualize the current working directory. With directories as argument: visualize each of the given directories. How intuitive is that!</li>
 	<li>Support of inode counting instead of file size analysis. Just add <code>-i</code> or <code>--inodes</code>.</li>
