added feature info about accounting hardlinked files

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Oh my god, that's handy for finding those pesky disk hogs!
 	<li>Progress reporting while you wait. Be hypnotized!</li>
 	<li>Duviz detects your terminal width for maximum visualization pleasure.</li>
 	<li>No arguments: visualize the current working directory. With directories as argument: visualize each of the given directories. How intuitive is that!</li>
+	<li>Hardlinked files in different directories are only accounted for once, thanks to how <code>du</code> works.</li>
 	<li>Support of inode counting instead of file size analysis. Just add <code>-i</code> or <code>--inodes</code>.</li>
 </ul>
 
