minor subtitle improvement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <header>
 <h1>Duviz</h1>
 <p class="subtitle">
-Disk space visualization<br />
+Disk usage visualization<br />
 in ASCII art style<br />
 for a command line near you!
 </p>
